Task-49207: Export_note_US_01-03: Export notes (#250) (#290)
* Task-49207: Export_note_US_01-03: Export notes by clicking on export in three dot